--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "vue": "^3.5.24",
     "vue-echarts": "^8.0.1",
     "vue-i18n": "^11.2.2",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^3.24.1",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
